                     Cria função de Ligar Peristálticas para Limpeza da Flauta por N segundos.
                     Cria função para Redefinir Volume de IBC (e muda status automaticamente se necessário).
            Back...: Implementa endpoint para Aferição de PH.
                     Implementa endpoint para Ligar Peristálticas.
                     Implementa endpoint para Redefinir Volume de IBC.
            Front..: Implementa botão e modal para Aferição de PH (Configurações / Biorreatores)
                     Implementa botão e modal para Ligar Peristálticas por N segundos.
                     Antes de iniciar novo cultivo, confirma se o sensor de PH está no 
            Portal.: Implementa botão e modal para Redefinir Volume de IBC.
            _conf..: Muda processo de CIP para ter três enxágues adicionais no final (pedido do Zé).
                     Muda a receita de cultivo (1000L e 2000L) para aplicar antiespumante logo após a inserção de meio.
                     PHs de Bacterias alterado para 5 a 7.2 e Fungos de 3.5 a 5.5 (pedido do Zé).
                     Tempo de circulação do Meio modificado para 60 seg (pedido do Zé).

1.2.34  -   Master.: Força o volume de Transferência (BIO / IBC) ser sempre o volume total, independente do que vier do Front (excessão se for 0)
20231023             Várias mensagens de DEBUG foram adicionadas no run_withdraw

1.2.35  -   Master.: Função grow_bio passa a considerar ranges diferentes de temperatura para os organismos.
20231024             Passa a ler, do arquivo de organismos, tipo de organismo (B=bactéria e F=fungo) e também o intervalo de temperatura de cultivo.
                     Corrige teste no refresh para identificar quando a falha é no painel de desenvase e também no TOTEM01.
                     Alerta e desliga resistência em get_alldata se temperatura exceder TEMPMAX.
                     Vários novos testes de segurança adicionados antes de ligar a resistência (função turn_heater).
